syntax = "proto3";

option go_package = "./";

package pb;

service Hello {
    //一个SayHello的方法
    rpc SayHello (HelloRequest) returns (HelloResp) {}
}

// 定义发送请求信息
message HelloRequest {
    // 定义发送的参数
    // 参数类型 参数名 标识号(不可重复)
    string name = 1;

}

// 定义响应信息
message HelloResp {
    string message = 1;
}


